Added role-based authentication support